WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
168893
Parsing font descriptors inside @font-face needs to accept ranges
https://bugs.webkit.org/show_bug.cgi?id=168893
Summary
Parsing font descriptors inside @font-face needs to accept ranges
Myles C. Maxfield
Reported
2017-02-26 21:22:27 PST
... but the properties don't accept ranges. Therefore, the parser needs to have two ways to parse these keywords.
Attachments
WIP
(27.17 KB, patch)
2017-03-06 18:53 PST
,
Myles C. Maxfield
no flags
Details
Formatted Diff
Diff
Patch
(43.66 KB, patch)
2017-03-06 19:58 PST
,
Myles C. Maxfield
dino
: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Myles C. Maxfield
Comment 1
2017-02-26 21:35:20 PST
This includes modifying CSSFontFace to take ranges, and migrating everything off of FontTraitsMask
Myles C. Maxfield
Comment 2
2017-03-06 18:53:08 PST
Created
attachment 303602
[details]
WIP
WebKit Commit Bot
Comment 3
2017-03-06 18:54:42 PST
Attachment 303602
[details]
did not pass style-queue: ERROR: Source/WebCore/ChangeLog:8: You should remove the 'No new tests' and either add and list tests, or explain why no new tests were possible. [changelog/nonewtests] [5] Total errors found: 1 in 6 files If any of these errors are false positives, please file a bug against check-webkit-style.
Myles C. Maxfield
Comment 4
2017-03-06 18:56:42 PST
***
Bug 168891
has been marked as a duplicate of this bug. ***
Myles C. Maxfield
Comment 5
2017-03-06 19:58:57 PST
Created
attachment 303607
[details]
Patch
Dean Jackson
Comment 6
2017-03-07 11:21:45 PST
Comment on
attachment 303607
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=303607&action=review
> Source/WebCore/css/CSSFontFace.cpp:135 > + auto& value0 = downcast<CSSPrimitiveValue>(*valueList.item(0)); > + auto& value1 = downcast<CSSPrimitiveValue>(*valueList.item(1));
You should probably guard for length == 2, not just ASSERT it.
Myles C. Maxfield
Comment 7
2017-03-07 11:26:29 PST
Committed
r213528
: <
http://trac.webkit.org/changeset/213528
>
Radar WebKit Bug Importer
Comment 8
2017-03-23 21:32:07 PDT
<
rdar://problem/31235144
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug